[package]
name = "skibidi_tiolet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = "0.23.2"
convert-js = "1.0.0-alpha.15"
dynfmt = {version="0.1.5", features = ["curly"]}
ron = "0.8.1"
serde = "1.0.197"
web-sys = {version="*", features = ["console"]}
